--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
 
     <section>
-      <h2>4. الجروب (واتساب/تليجرام)</h2>
+      <h2>4. الجروب</h2>
       <ul>
         <li>مفيش سبام أو رسايل ملهاش علاقة بالأسرة.</li>
         <li>الإعلانات المهمة تتثبت عشان الكل يشوفها.</li>
